--- a/index1.css
+++ b/index1.css
@@ -28,6 +28,7 @@ body {
     font-size: 30px;
     background-color: bisque;
     color: black;
+    font-family: 'Arial Narrow', Arial, sans-serif;
 }
 #reset-btn,
 #new-btn {
